--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-rotating-text": "^1.4.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
+    "react-tsparticles": "^1.39.0",
     "tsparticles": "^1.39.0",
     "web-vitals": "^2.1.3"
   },
