--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-rotating-text": "^1.4.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
